@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-31T13:34:20Z",
-  "count" : 12,
-  "count_minmax" : [ 12, 12 ],
-  "count_decinc" : [ -0, +12 ],
-  "uniques" : 6,
-  "uniques_minmax" : [ 6, 6 ],
-  "uniques_decinc" : [ -0, +6 ]
+  "timestamp" : "2022-08-31T16:28:27Z",
+  "count" : 13,
+  "count_minmax" : [ 12, 13 ],
+  "count_decinc" : [ -0, +13 ],
+  "uniques" : 7,
+  "uniques_minmax" : [ 6, 7 ],
+  "uniques_decinc" : [ -0, +7 ]
 }
