@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-31T13:34:20Z",
+  "timestamp" : "2022-08-31T16:28:27Z",
   "count_outdated" : 0,
   "uniques_outdated" : 0,
-  "count" : 119,
-  "uniques" : 20,
+  "count" : 120,
+  "uniques" : 21,
   "clones" : [
     {
       "timestamp": "2022-08-29T00:00:00Z",
@@ -21,10 +21,10 @@
     },
     {
       "timestamp": "2022-08-31T00:00:00Z",
-      "count": 12,
-      "count_minmax": [ 12, 12 ],
-      "uniques": 6,
-      "uniques_minmax": [ 6, 6 ]
+      "count": 13,
+      "count_minmax": [ 12, 13 ],
+      "uniques": 7,
+      "uniques_minmax": [ 6, 7 ]
     }
   ]
 }
