@@ -1,6 +1,6 @@
 {
-  "count": 119,
-  "uniques": 15,
+  "count": 120,
+  "uniques": 16,
   "clones": [
     {
       "timestamp": "2022-08-29T00:00:00Z",
@@ -14,8 +14,8 @@
     },
     {
       "timestamp": "2022-08-31T00:00:00Z",
-      "count": 12,
-      "uniques": 6
+      "count": 13,
+      "uniques": 7
     }
   ]
 }
